# crawl

./: Cargo.toml  README.md  crawl.grammar  random-encounters.csv  table.csv  test.crawl  test.procedure  weather.csv
.github/workflows/: build.yml
src/: dice.rs  error.rs  facts.rs  interpreter.rs  lang.rs  lib.rs  main.rs  parser.rs  rolls.rs  scanner.rs  tables.rs
