[package]
name = "crawl"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
ctrlc = "3.4.5"
rand = "0.8.5"
regex = "1.11.1"
thiserror = "2.0.11"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
